RESOLVED FIXED236954
css/css-grid/subgrid/orthogonal-writing-mode-003.html fails
https://bugs.webkit.org/show_bug.cgi?id=236954
Summary css/css-grid/subgrid/orthogonal-writing-mode-003.html fails
Matt Woodrow
Reported 2022-02-20 23:15:39 PST
Looks like we're accounting for the subgrid margin/border/padding on the wrong edge, like due to writing-mode changes between grids.
Attachments
Patch (3.73 KB, patch)
2022-02-21 13:46 PST, Matt Woodrow
no flags
Radar WebKit Bug Importer
Comment 1 2022-02-20 23:16:03 PST
Matt Woodrow
Comment 2 2022-02-21 13:46:18 PST
Dean Jackson
Comment 3 2022-02-21 17:12:33 PST
Comment on attachment 452769 [details] Patch Assuming the bots get another crack at this after the WebGPU breakage is cleared...
EWS
Comment 4 2022-02-27 18:15:47 PST
Committed r290576 (247854@main): <https://commits.webkit.org/247854@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 452769 [details].
Note You need to log in before you can comment on or make changes to this bug.