Convert grid direction to be relative to subgrid when accounting for extra margin. https://bugs.webkit.org/show_bug.cgi?id=236954

Reviewed by Dean Jackson.

Source/WebCore:

|direction| is passed as a direction relative to |grid|, so we need to convert it
to be a direction relative to the subgrid item in order to account for margin on
the correct edge.

Marks existing test orthogonal-writing-mode-003.html as passing.

* rendering/GridLayoutFunctions.cpp:
(WebCore::GridLayoutFunctions::marginLogicalSizeForChild):

LayoutTests:

* TestExpectations:

Marks existing test orthogonal-writing-mode-003.html as passing.



Canonical link: https://commits.webkit.org/247854@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@290576 268f45cc-cd09-0410-ab3c-d52691b4dbfc